feat: add search term and prefix

--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/Mikaelss/VideoMaker/issues"
   },
-  "homepage": "https://github.com/Mikaelss/VideoMaker#readme"
+  "homepage": "https://github.com/Mikaelss/VideoMaker#readme",
+  "dependencies": {
+    "readline-sync": "^1.4.10"
+  }
 }
